<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hitchhiker 2.0</string>
    <string name="action_settings">Settings</string>
    <string name="hitchhiker_tab">Autostopowicz</string>
    <string name="driver_tab">Kierowca</string>

    <!-- DRIVER FORM -->
    <string name="save_form">Zapisz</string>
    <string name="form_destinantion">Kierunek</string>
    <string name="form_free_seats">Wolne miejsca</string>
    <string name="saved_info">Formularz zapisano pomyślnie!</string>
    <string name="without_children">Bez dzieci</string>
    <string name="age_hint">Wiek pasażerów:</string>
    <string name="baggage_hint">Wielkość bagaży:</string>
    <string name="sex_hint">Płeć pasażerów:</string>
    <string name="preferences">Preferencje:</string>

    <string-array name="baggage_array">
        <item>dowolny</item>
        <item>mały</item>
        <item>średni</item>
        <item>duży</item>
    </string-array>
    <string-array name="sex_type_array">
        <item>dowolna</item>
        <item>tylko kobiety</item>
        <item>tylko mężczyżni</item>
        <item>mieszane</item>
    </string-array>
    <string-array name="age_array">
        <item>dowolny</item>
        <item>młodzież</item>
        <item>dorośli</item>
        <item>seniorzy</item>
    </string-array>

    <!-- HITCHHIKER FORM -->
    <string name="additional_info">Dodatkowe informacje:</string>
    <string name="people_number">Liczba osób</string>
    <string name="with_children">Z dziećmi</string>

    <string-array name="baggage_array_hic">
        <item />
        <item>mały</item>
        <item>średni</item>
        <item>duży</item>
    </string-array>
    <string-array name="sex_type_array_hic">
        <item />
        <item>tylko kobiety</item>
        <item>tylko mężczyżni</item>
        <item>mieszane</item>
    </string-array>
    <string-array name="age_array_hic">
        <item />
        <item>młodzież</item>
        <item>dorośli</item>
        <item>seniorzy</item>
    </string-array>

    <!-- HITCHHIKER NOTIFICATION -->
    <string name="new_hitchhiker_notif_title">Nowy autostopowicz w pobliżu.</string>
    <string name="title_activity_notification_receiver">NotificationReceiverActivity</string>
    <string name="hello_world">Hello world!</string>

    <string name="edit_form">Edytuj</string>
    <string name="cancel_form">Anuluj</string>
    <string name="confirm_form">Potwierdź</string>

    <string name="my_location">Zapisana pozycja</string>
    <string name="turn_on_gps">GPS niedostępny</string>
    <string name="error_location">Nie można pobrać lokalizacji</string>
    <string name="error_internet">Brak połaczenia z internetem</string>
    <string name="error_register_form">Błąd rejestracji, spróbuj ponownie</string>
    <string name="error_destination">Kierunek podróży jest pusty</string>
    <string name="error_already_registered">Jesteś już zarejestrowany</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="no_trips">Jeszcze nigdzie nie podróżowałeś</string>
    <string name="unregister_trip">Wyrejestruj</string>
    <string name="cancel">Anuluj</string>
    <string name="already_registered_hitchhiker">Jesteś już zarejestrowanym autosptopowiczem. Zakończyłeś już podróż lub chcesz się wyrejestrowac?</string>
    <string name="already_registered_driver">Jesteś już zarejestrowanym kierowcą. Zakończyłeś już podróż lub chcesz się wyrejestrowac?</string>
    <string name="finish_trip">Zakończ</string>
    <string name="additional_destinations">Pośrednie kierunki:</string>
    <string name="add_destination">Dodaj</string>
    <string name="form_destinantion_additional">Pośredni kierunek</string>
    <string name="delete_destination">Usuń</string>
    <string name="logout">Wyloguj się</string>
    <string name="car_info">Opis samochodu</string>
    <string name="want_take">Chcesz zabrac tego autostopowicza?</string>
    <string name="yes">Tak</string>
    <string name="no">Nie</string>
    <string name="nick">Nick</string>
    <string name="password">Hasło</string>
    <string name="login">Zaloguj</string>
    <string name="register">Zarejestruj</string>
    <string name="firstname">Imię</string>
    <string name="lastname">Nazwisko</string>
    <string name="mail">E-mail</string>
    <string name="register_error">Błąd rejestracji</string>
    <string name="login_error">Błędne dane</string>
    <string name="have_account">Masz już konto? <b>Zaloguj się</b></string>
    <string name="incorrect_fields">Uzupełnij wszystkie pola</string>

</resources>
