<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="pl.agh.edu.hitchhiker.RegisterDriverFragment"
        android:padding="20dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/form_destinantion"
            android:ems="10"
            android:id="@+id/editDestination"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/additional_info"
            android:id="@+id/additionalInfo"
            android:layout_below="@id/editDestination"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="18sp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/peopleNumber"
            android:hint="@string/people_number"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/additionalInfo"
            android:layout_marginLeft="10dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/peopleNumber"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal"
            android:id="@+id/ageLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age_hint"
                android:id="@+id/ageHint"
                android:layout_gravity="center_vertical"
                android:layout_weight="1" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/age_spinner"
                android:layout_weight="1"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ageLayout"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal"
            android:id="@+id/baggageLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/baggage_hint"
                android:id="@+id/baggageHint"
                android:layout_gravity="center_vertical"
                android:layout_weight="1" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/baggageSpinner"
                android:layout_weight="1"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/baggageLayout"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal"
            android:id="@+id/sexTypeLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex_hint"
                android:id="@+id/sexHint"
                android:layout_gravity="center_vertical"
                android:layout_weight="1" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sexSpinner"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                />
        </LinearLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sexTypeLayout"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:id="@+id/childrenLayout"
            android:layout_marginLeft="10dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/without_children"
                android:id="@+id/notChildrenButton" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/with_children"
                android:id="@+id/childrenButton" />


        </RadioGroup>

        <FrameLayout
            android:id="@+id/saveButtonWrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/childrenLayout">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_form"
                android:id="@+id/saveButton"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp" />

            <ProgressBar
                android:id="@+id/saveButtonProgress"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="invisible" />
        </FrameLayout>
    </RelativeLayout>
</ScrollView>


