<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.agh.edu.hitchhiker.RegisterDriverFragment"
    android:padding="30dp"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/form_destinantion"
        android:ems="10"
        android:id="@+id/editDestination"
         />




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Preferencje:"
        android:id="@+id/additional_info"
   />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText"
        android:hint="@string/form_free_seats"
 />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/age_spinner"
         />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/baggage_spinner"
        />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sex_spinner"
        />

    <FrameLayout
        android:id="@+id/saveButtonWrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_form"
            android:id="@+id/saveButton"
             />

        <ProgressBar
            android:id="@+id/saveButtonProgress"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="invisible" />
    </FrameLayout>

</LinearLayout>
