<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:float="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:background="@android:color/white">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/hitch"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal"/>

        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            float:fletFloatingHint="@string/nick"
            float:fletInputType="text"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            float:fletFloatingHint="@string/password"
            float:fletInputType="textPassword"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <FrameLayout
            android:id="@+id/loginButtonWrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp">

            <Button
                android:background="@drawable/blue_button"
                style="@style/button_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:id="@+id/loginButton"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="40dp"
                android:paddingRight="40dp" />

            <ProgressBar
                android:id="@+id/loginButtonProgress"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="invisible" />
        </FrameLayout>

    </LinearLayout>

</ScrollView>